feat: readme added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
     <header>
         <div class="logo">
             <img src="./assets/img/light-logo.png" alt="">
@@ -349,67 +352,7 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <!-- Initialize Swiper -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            var swiper = new Swiper(".mySwiper", {
-                slidesPerView: 1, // Number of slides per view
-                spaceBetween: 20, // Space between slides (in pixels)
-                loop: true, // Enable loop mode
-                pagination: {
-                    el: ".swiper-pagination", // Pagination container
-                    clickable: true, // Enable clickable pagination bullets
-                },
-            });
-        });
-        document.addEventListener('DOMContentLoaded', () => {
-            const propertyTypeSelect = document.getElementById('property-type');
-            const commercialOptionsContainer = document.getElementById('commercial-options');
-
-            // Function to show or hide commercial options based on selected value
-            function toggleCommercialOptions() {
-                const selectedValue = propertyTypeSelect.value;
-                if (selectedValue === 'Commercial') {
-                    commercialOptionsContainer.style.display = 'block';
-                } else {
-                    commercialOptionsContainer.style.display = 'none';
-                }
-            }
-
-            // Initial call to toggle options based on default selection
-            toggleCommercialOptions();
-
-            // Event listener for dropdown change
-            propertyTypeSelect.addEventListener('change', toggleCommercialOptions);
-        });
-
-    </script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const counts = document.querySelectorAll('.count');
-            const speed = 97; // Adjust the speed for incrementing the count
-
-            counts.forEach((counter) => {
-                const target = parseInt(counter.getAttribute('data-target'));
-                let count = 0;
-                const inc = target / speed;
-
-                function updateCount() {
-                    count += inc;
-                    if (count < target) {
-                        counter.innerText = Math.floor(count);
-                        setTimeout(updateCount, 100); // Adjust the timeout interval
-                    } else {
-                        counter.innerText = target;
-                    }
-                }
-
-                updateCount();
-            });
-        });
-
-    </script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
