fix: folder structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <!-- Github Link for the code : https://github.com/avezqureshi14/brickfolio-mohammad-avez -->
+    <!-- Deployed Link 🔴 : https://brickfolio-mohammad-avez.netlify.app/ -->
     <div class="loader-container">
         <div class="loader"></div>
     </div>
